--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
+    }
+    dataBinding {
+        enabled = true
     }
 }
 
@@ -63,5 +67,6 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
     implementation "androidx.navigation:navigation-fragment-ktx:2.2.1"
     implementation "androidx.navigation:navigation-ui-ktx:2.2.1"
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
